--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4166,3 +4166,12 @@
 .custominner {
 	margin: 0 3em  3em;
 }
+
+#font_fix {
+		font-size: 30px;
+		color: #333333;
+}
+#font_fix a {
+	color: #4696e5;
+
+}
